--- a/nav.html
+++ b/nav.html
@@ -176,14 +176,13 @@
 			<div id="gnb">
 				<div class="gnb_wrap">
 					<ul id="gnb_menu">
-						<li id="menu01"><a href="/activeblackbox/product/sub01_01.php" class="dep01">대메뉴1</a> <!--대분류넣는곳-->
+						<li id="menu01"><a href="/activeblackbox/product/sub01_01.php" class="dep01">박가만세</a> <!--대분류넣는곳-->
 							<div id="dep02_01" class="dep02">
 								<div class="sub_nav">
 									<div class="sub_rt_nav">
 										<ul class="dep02_nav">
 											<li><a href="">중메뉴1-1</a></li>
 											<li><a href="">중메뉴1-2</a></li>
-											<li><a href="">중메뉴1-3</a></li>
 										</ul>
 										<ul class="dep02_nav">
 											<li><a href="#">중메뉴2-1</a></li>
